# lambda

./: .swp  LICENSE  README.md  lambda.cabal
app/: Main.hs
resources/: Choice.lc  allBase.lc  base.lc  collatz.lc  option.lc
src/: Extraction.hs  Interpreter.hs  Lambda.hs  LazyInterpreter.hs  Node.hs  Parser.hs  Scope.hs
src/HL/: AST.hs  Base.hs  Compiler.hs  Environment.hs  Fresh.hs  MonadClasses.hs  Parser.hs  SExp.hs  Scoper.hs  Type.hs  TypeConversion.hs  TypeInference.hs  Typed.hs
test/: InterpreterSpec.hs  ParserSpec.hs  Spec.hs
test/HL/: CompilerSpec.hs  ParserSpec.hs  SExpSpec.hs  TypeInferenceSpec.hs  TypedSpec.hs
