name:                lambda
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/lambda#readme
license:             BSD3
license-file:        LICENSE
author:              Tobin Yehle
maintainer:          tobinyehle@gmail.com
copyright:           2016 Tobin Yehle
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lambda, Parser, Node, Pretty, HL.Compiler, HL.AST, HL.Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec
  ghc-options:         -Wall
  default-language:    Haskell2010

executable lambda-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite lambda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ParserSpec, HL.ParserSpec, HL.CompilerSpec
  build-depends:       base
                     , lambda
                     , tasty
                     , tasty-hunit
                     , parsec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lambda
